--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,292 @@
-/* You can add global styles to this file, and also import other style files */
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  display: flex;
+  justify-content: center !important;
+  flex-direction: column !important;
+  color: #989C9D;
+  background: #090D0E url("assets/img/background.png") no-repeat center center fixed;
+  background-size: cover;
+  font-family: "Roboto", "Segoe UI", "GeezaPro", "DejaVu Serif", "sans-serif", "-apple-system", "BlinkMacSystemFont";
+}
+
+body::after {
+  content: "";
+  background: rgba(9, 13, 14, 0.9);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+
+#control_wrapper.control_wrapper {
+  padding: 1% 4% 1% !important;
+}
+
+
+label {
+  color: #44A39D;
+}
+
+input:invalid {
+  border-bottom: 1px solid #66FCF0;
+}
+
+
+input {
+  color: #989C9D !important;
+
+}
+
+
+a {
+  color: #44A39D;
+  transition: all 0.5s ease;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #44A39D
+}
+
+a:hover {
+  color: #64FEF0;
+  text-decoration: none;
+}
+
+.e-float-input input, .e-float-input textarea, .e-float-input.e-control-wrapper input, .e-float-input.e-control-wrapper textarea {
+  border-bottom-color: #66FCF0 !important;
+}
+
+
+p {
+  color: #44A39D;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #64FEF0;
+}
+
+.icon {
+  fill: #44A39D;
+}
+
+button {
+  background-color: transparent;
+  border: 1px solid #66FCF0;
+}
+
+.control-section {
+  flex-direction: column
+}
+
+.control_wrapper {
+  max-width: 500px;
+  min-width: 245px;
+  margin: auto;
+}
+
+.address-field {
+  resize: none;
+}
+
+#control_wrapper {
+  max-width: 500px;
+  margin: auto;
+  border: 0.5px solid #64FEF0;
+  border-radius: 15px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.36);
+  padding: 1% 4% 0%;
+  background: #202833;
+}
+
+.highcontrast #control_wrapper,
+.bootstrap-dark #control_wrapper,
+.bootstrap5-dark #control_wrapper,
+.bootstrap4-dark #control_wrapper,
+.fluent-dark #control_wrapper,
+.fabric-dark #control_wrapper,
+.tailwind-dark #control_wrapper,
+.material-dark #control_wrapper {
+  background: inherit;
+}
+
+#reactive .form-group .upload-area {
+  width: 100%;
+}
+
+.e-error {
+  padding-top: 3px;
+}
+
+#reactive .form-group .submit-btn {
+  margin: 15px 15px;
+  position: relative;
+  background-color: transparent;
+  border: 1px solid #66FCF0;
+  color: #C3C7C8;
+}
+
+#reactive .form-group .submitBtn .desc {
+  margin: 2% 23% 0% 18%;
+}
+
+@media only screen and (max-width: 500px) {
+  #reactive .form-group .submitBtn .desc {
+    margin: 12px;
+  }
+}
+
+#reactive .form-group .submitBtn {
+  position: relative;
+  text-align: center;
+}
+
+#reactive .form-group .submit-btn:disabled {
+  background-color: transparent;
+  border: 1px solid #66FCF0;
+  color: #808080;
+  transition: all 0.5s ease;
+}
+
+#reactive .form-group .submit-btn {
+  background-color: transparent;
+  border: 1px solid #66FCF0;
+  color: #C3C7C8;
+  transition: all 0.5s ease;
+}
+
+#reactive .form-group .submit-btn:not(:disabled):hover {
+  color: #64FEF0;
+}
+
+.bootstrap #reactive .form-group .submit-btn {
+  margin-left: 8px;
+}
+
+.e-bigger.material #reactive .form-group .submit-btn {
+  margin-left: -7px;
+}
+
+.fabric #reactive .form-group .submit-btn, .highcontrast #reactive .form-group .submit-btn {
+  margin-left: -11px;
+}
+
+.e-bigger.fabric #reactive .form-group .submit-btn, .e-bigger.highcontrast #reactive .form-group .submit-btn {
+  margin-left: -25px;
+}
+
+.e-bigger.bootstrap #reactive .form-group .submit-btn {
+  margin-left: -8px;
+}
+
+.success .successmsg {
+  border: 0.5px solid green;
+  padding: 10%;
+  color: green;
+}
+
+form#reactive {
+  position: relative;
+  top: 14%;
+}
+
+.material #reactive .form-group .e-upload, #reactive .form-group .e-upload {
+  display: none;
+}
+
+#reactive .upload-area button#browse {
+  float: right;
+  margin-top: -28px;
+}
+
+.material.e-bigger #reactive .upload-area button#browse {
+  margin-top: -36px;
+}
+
+.fabric #reactive .upload-area button#browse,
+.highcontrast #reactive .upload-area button#browse {
+  float: right;
+  margin-top: -32px;
+}
+
+.fabric.e-bigger #reactive .upload-area button#browse,
+.highcontrast.e-bigger #reactive .upload-area button#browse,
+.bootstrap.e-bigger #reactive .upload-area button#browse {
+  margin-top: -40px;
+}
+
+.bootstrap #reactive .upload-area button#browse {
+  float: right;
+  margin-top: -35px;
+}
+
+#reactive .form-group .e-float-input.upload-area .e-float-line, .material .e-float-input.upload-area .e-float-line {
+  width: 70%;
+  margin-top: initial;
+}
+
+#reactive .form-group .upload-area input {
+  width: 70%;
+}
+
+@media (min-width: 250px) and (max-width: 500px) {
+  #control_wrapper.control_wrapper {
+    padding: 1% 4% 12%;
+  }
+}
+
+@media (max-width: 300px) {
+  #control_wrapper.control_wrapper {
+    padding: 1% 4% 15%;
+  }
+}
+
+.bootstrap #reactive .form-group .upload-area {
+  background: transparent;
+}
+
+.form-title {
+  text-align: center;
+  margin-bottom: 4rem;
+  margin-top: 3rem;
+}
+
+.e-float-text {
+  color: #44A39D;
+}
+
+.e-float-input.e-success label.e-float-text {
+  color: #44A39D;
+}
+
+.e-float-input.e-success input:focus ~ label.e-float-text {
+  color: #44A39D;
+}
+
+.e-float-input.e-success input:valid ~ label.e-float-text {
+  color: #44A39D;
+}
+
+.form-group.template {
+  padding-top: 8px;
+}
+
+.form-group #mobile-no input[type=number]::-webkit-inner-spin-button,
+.form-group #mobile-no input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.e-dlg-overlay {
+  position: fixed !important;
+}
+
+
