--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,5 +1,4 @@
-
-<div class="control-section">
+<div class="control-section flex h-full justify-center flex-col">
   <div class="col-lg-12">
     <div
       class="control_wrapper"
@@ -7,7 +6,7 @@
       style="margin: 25px auto;"
     >
       <form [formGroup]="form" id="reactive">
-        <h4 class="form-title"><strong>Registration Form</strong></h4>
+        <h2 class="form-title"><strong>Registration Form</strong></h2>
         <div class="form-group template">
           <div
             [ngClass]="{ 'e-success': form?.controls['firstname'].valid }"
@@ -18,6 +17,7 @@
               formControlName="firstname"
               id="firstname"
               name="firstname"
+              placeholder="John"
               type="text"
             />
             <span class="e-float-line"></span>
@@ -36,6 +36,7 @@
               formControlName="lastname"
               id="lastname"
               name="lastname"
+              placeholder="Doe"
               type="text"
             />
             <span class="e-float-line"></span>
@@ -54,6 +55,7 @@
               formControlName="username"
               id="username"
               name="username"
+              placeholder="johndoe123"
               type="text"
             />
             <span class="e-float-line"></span>
@@ -72,6 +74,7 @@
               formControlName="password"
               id="password"
               name="password"
+              placeholder="Password123"
               type="password"
             />
             <span class="e-float-line"></span>
@@ -92,6 +95,7 @@
               id="email"
               name="email"
               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+              placeholder="johndoe@example.com"
               type="text"
             />
             <span class="e-float-line"></span>
@@ -112,18 +116,20 @@
               formControlName="mobile"
               id="mobileno"
               name="mobile"
+              placeholder="1234567890"
               type="number"
             />
             <span class="e-float-line"></span>
             <label
               class="e-float-text"
-            ><p>Mobile No</p></label
-            >
+            ><p>Mobile No</p></label>
           </div>
+
+
           <app-field-error-display [displayError]="isFieldValid('mobile')" errorMsg="* Enter a valid mobile number">
           </app-field-error-display>
         </div>
-        <h6><a routerLink="../login" >Already have an account? Authorize</a></h6>
+        <p><a routerLink="../login">Already have an account? Authorize</a></p>
         <div class="form-group template">
           <div class="submitBtn">
             <button
