Authentication is complete and auth.service is added

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -35,7 +35,7 @@
             <input
               (focusout)="focusoutfunction($event)"
               class="required"
-              formControlName="username"
+              formControlName="email"
               id="email"
               name="email"
               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
