--- a/src/app/dashboard/schedule/myschedule.component.css
+++ b/src/app/dashboard/schedule/myschedule.component.css
@@ -6,7 +6,7 @@
   padding-left: 20px;
 }
 
-.e-accordion .e-acrdn-item.e-select.e-selected.e-expand-state>.e-acrdn-header, .e-accordion .e-acrdn-item.e-select.e-expand-state>.e-acrdn-header {
+.e-accordion .e-acrdn-item.e-select.e-selected.e-expand-state > .e-acrdn-header, .e-accordion .e-acrdn-item.e-select.e-expand-state > .e-acrdn-header {
   border-radius: 10px;
 }
 
@@ -22,7 +22,7 @@
   align-items: center;
 }
 
-.e-accordion .e-acrdn-item.e-select>.e-acrdn-header {
+.e-accordion .e-acrdn-item.e-select > .e-acrdn-header {
   border-radius: 10px;
 }
 
@@ -45,12 +45,11 @@
 }
 
 
-/* Стили для больших экранов */
 .e-schedule .e-work-cells {
   width: 200px;
 }
 
-/* Стили для мобильных устройств */
+
 @media (max-width: 600px) {
 
   .adaptive-rows.e-schedule .e-timeline-view .e-resource-left-td {
@@ -72,31 +71,34 @@
   }
 
 }
+
 td.e-textlabel {
   display: flex;
   margin-right: 7rem;
 }
 
-.event-content>div{
+.event-content > div {
   display: flex;
   column-gap: 2rem;
   align-items: baseline;
 }
 
-.event-content>div>div{
+.event-content > div > div {
   display: flex;
   align-items: center;
 }
+
 .e-quick-popup-wrapper .e-event-popup .e-popup-content {
   padding: 10px 15px 10px 15px;
 }
 
-.classroom-type{
+.classroom-type {
   display: flex;
   flex-direction: row;
   justify-content: space-between
 }
-.template-wrap{
+
+.template-wrap {
   padding: 10px 4px;
   width: 100%;
   border: 1px solid #ddd;
@@ -106,16 +108,12 @@ td.e-textlabel {
 }
 
 
-
-
 .e-schedule .e-timeline-view .e-appointment .e-appointment-details, .e-schedule .e-timeline-month-view .e-appointment .e-appointment-details {
   padding: 0;
 }
 
 
-
-
-.e-btn, .e-css.e-btn  {
+.e-btn, .e-css.e-btn {
   background-color: #7750D4;
   border: 1px solid #8339E6;
   color: #FFFFFF;
@@ -127,26 +125,30 @@ td.e-textlabel {
 
 
 .e-btn:hover, .e-css.e-btn:hover {
-  background-color: #893AC7;  border-color: rgba(0, 0, 0, 0);
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  background-color: #893AC7;
+  border-color: rgba(0, 0, 0, 0);
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
   color: #FFFFFF;
 }
 
 .e-btn:focus, .e-css.e-btn:focus {
-  background-color: #7750D4;  border-color: rgba(0, 0, 0, 0);
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  background-color: #7750D4;
+  border-color: rgba(0, 0, 0, 0);
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
   color: #FFFFFF;
 }
 
 .e-btn:visited, .e-css.e-btn:visited {
-  background-color: #7750D4;  border-color: rgba(0, 0, 0, 0);
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  background-color: #7750D4;
+  border-color: rgba(0, 0, 0, 0);
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
   color: #FFFFFF;
 }
 
 .e-btn:after, .e-css.e-btn:after {
-  background-color: #7750D4;  border-color: rgba(0, 0, 0, 0);
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+  background-color: #7750D4;
+  border-color: rgba(0, 0, 0, 0);
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
   color: #FFFFFF;
 }
 
@@ -161,11 +163,11 @@ td.e-textlabel {
 }
 
 td.e-field.button-customization {
-  width: 5%!important;
+  width: 5% !important;
 }
 
 td.e-field.button-customization:nth-child(2) {
-  width: 95%!important;
+  width: 95% !important;
 }
 
 #seperateSearch {
@@ -178,7 +180,7 @@ td.e-field.button-customization:nth-child(2) {
     margin-right: 3rem;
   }
 
-  .e-btn, .e-css.e-btn  {
+  .e-btn, .e-css.e-btn {
     padding: 10px 20px;
   }
 }
@@ -187,5 +189,10 @@ td.e-field.button-customization:nth-child(2) {
 .e-accordion {
   overflow-y: hidden;
 }
+
+.e-tooltip-wrap.e-schedule-error {
+  display: none;
+}
+
 
 
