--- a/src/styles.css
+++ b/src/styles.css
@@ -113,7 +113,7 @@ button {
   margin: auto;
   border-radius: 15px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.36);
-  padding: 1% 4% 0%;
+  padding: 1% 4% 0;
   background: #FFFFFF;
 }
 
@@ -145,7 +145,7 @@ button {
 }
 
 #reactive .form-group .submitBtn .desc {
-  margin: 2% 23% 0% 18%;
+  margin: 2% 23% 0 18%;
 }
 
 @media only screen and (max-width: 500px) {
@@ -305,6 +305,19 @@ form#reactive {
 .header {
   height: 6rem;
 }
+
+
+.e-toolbar .e-toolbar-item .e-tbar-btn:hover {
+  color: #893AC7;
+  border-radius: 1rem;
+  padding: 0 1rem;
+}
+
+.e-toolbar .e-toolbar-item .e-tbar-btn {
+  border-radius: 10px;
+  padding: 0 1rem;
+}
+
 @media (max-width: 300px) {
   .e-inherit.header-btn {
     font-size: 80%;
