Fixed search by subject type

--- a/src/app/dashboard/schedule/myschedule.component.html
+++ b/src/app/dashboard/schedule/myschedule.component.html
@@ -43,10 +43,10 @@
                         </tr>
                         <tr class="row" style="height: 45px">
                           <td colspan="4">
-                            <ejs-dropdownlist #eventTypeSearch [dataSource]='subjects'
+                            <ejs-dropdownlist #eventTypeSearch [dataSource]='lessonTypes'
                                               [fields]='{ text: "name", value: "id" }'
                                               class="e-field" data-name="eventTypeSearch"
-                                              id='eventTypeSearch'
+                                              id='subject_type_search_content'
                                               placeholder='Select type'></ejs-dropdownlist>
                           </td>
                         </tr>
