Added a dashboard for managing teachers and faculties

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-header class="block header"></app-header>
-<app-groups></app-groups>
+<app-schedule-table-creator></app-schedule-table-creator>
 
 <script>
   window.onload = function() {
