--- a/src/app/dashboard/schedule/myschedule.component.html
+++ b/src/app/dashboard/schedule/myschedule.component.html
@@ -92,7 +92,7 @@
                   [currentView]="currentView" [endHour]='endHour' [eventSettings]="eventSettings"
                   [group]="group" [rowAutoHeight]='rowAutoHeight'
                   [selectedDate]="selectedDate" [startHour]='startHour' class="rounded-2xl" cssClass='adaptive-rows'
-                  height='100vh' id='schedule' width='100%' [readonly]="true">
+                  height='100vh' id='schedule' width='100%' [readonly]="false">
       <e-resources>
         <e-resource [allowMultiple]='allowMultiple' [dataSource]='resourceDataSource' colorField='color'
                     field='dayOfWeek'
