--- a/src/app/dashboard/schedule/schedule.component.html
+++ b/src/app/dashboard/schedule/schedule.component.html
@@ -2,91 +2,8 @@
 
   <div class="content-wrapper">
 
-    <div class="control-section accordion-control-section">
-      <div class="e-sample-resize-container my-5 rounded-2xl">
-        <ejs-accordion class="p-3 rounded-2xl">
-          <e-accordionitems>
-            <e-accordionitem>
-              expanded='true'
-              <ng-template #header class="flex items-center">
-                <div class="pl-4 font-bold text-3xl">Search by all event fields</div>
-              </ng-template>
-              <ng-template #content>
-                <div class="property-section property-customization bg-white rounded px-4 pb-4">
-                  <div class="property-panel-section">
-                    <div class="property-panel-content">
-                      <input (keyup)="globalSearch($event)" class="e-input" id="events-search"
-                             placeholder="Teacher name, subject, classroom"
-                             type="text"/>
-                    </div>
-                    <form class="event-search" id="form-search">
-                      <p class="property-panel-header  header-customization w-full mt-14 uppercase text-lg">Search by
-                        specific event fields</p>
-                      <table id="property-specific" style="width: 100%">
-                        <tbody>
-                        <tr class="row">
-                          <td class="property-panel-content" colspan="2">
-                            <input #subject_id class="e-input e-subject" id="subject_id" name="subject_id"
-                                   placeholder="Subject"
-                                   required
-                                   type="text"/>
-                          </td>
-                        </tr>
-                        <tr class="row" style="height: 45px">
-                          <td class="property-panel-content" colspan="2">
-                            <input #classroom_id_search_content class="e-input e-location"
-                                   id="classroom_id_search_content"
-                                   name="classroom_id_search_content"
-                                   placeholder="Location" required
-                                   type="text"/>
-                          </td>
-                        </tr>
-                        <tr class="row" style="height: 45px">
-                          <td colspan="4">
-                            <ejs-dropdownlist #eventTypeSearch [dataSource]='lessonTypes'
-                                              [fields]='{ text: "name", value: "id" }'
-                                              class="e-field" data-name="eventTypeSearch"
-                                              id='subject_type_search_content'
-                                              placeholder='Select type'></ejs-dropdownlist>
-                          </td>
-                        </tr>
-                        <tr class="row" style="height: 45px">
-                          <td class="property-panel-content" colspan="2">
-                            <ejs-datepicker #startTime_search_content [showClearButton]=false class="e-start-time"
-                                            content id='startTime_search_content'
-                                            placeholder="Start Time"></ejs-datepicker>
-                          </td>
-                        </tr>
-                        <tr class="row" style="height: 45px">
-                          <td class="property-panel-content " colspan="2">
-                            <ejs-datepicker #endTime_search_content [showClearButton]=false class="e-end-time"
-                                            id='endTime_search_content'
-                                            placeholder="End Time"></ejs-datepicker>
-                          </td>
-                        </tr>
 
-                        <tr class="row" style="height: 45px">
-                          <td class="e-field button-customization" style="width: 50%;">
-                            <button (click)="searchOnClick()" class="submit-btn e-btn mt-12" content="Search" ejs-button
-                                    id="seperateSearch" type="button"></button>
-                          </td>
-                          <td class="e-field button-customization" style="width: 50%;">
-                            <button (click)='clearOnClick()' class="submit-btn e-btn mt-12 " content="Clear" ejs-button
-                                    id="clear"
-                                    type="button"></button>
-                          </td>
-                        </tr>
-                        </tbody>
-                      </table>
-                    </form>
-                  </div>
-                </div>
-              </ng-template>
-            </e-accordionitem>
-          </e-accordionitems>
-        </ejs-accordion>
-      </div>
-    </div>
+    <app-create-schedule-modal [selectedGroupScheduleCells]="selectedGroupScheduleCells" [userID]="userID"></app-create-schedule-modal>
 
     <ejs-schedule #scheduleObj (actionBegin)="onActionBegin($event)"
                   [currentView]="currentView" [endHour]='endHour' [eventSettings]="eventSettings"
