--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <app-header class="block header"></app-header>
-<app-groups></app-groups>
-
+<app-search [subjects]="subjects"></app-search>
+<app-groups [(scheduleData)]="scheduleData"></app-groups>
+<router-outlet></router-outlet>
 <script>
   window.onload = function() {
     const selectElement = document.getElementById('ej2_dropdownlist_194517_hidden');
