--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <app-header class="block header"></app-header>
-<app-search [subjects]="subjects"></app-search>
-<app-groups [(scheduleData)]="scheduleData"></app-groups>
+<app-search (dataEvent)="getData($event)" ></app-search>
+<!--<app-groups [(scheduleData)]="scheduleData"></app-groups>-->
+<app-schedule *ngIf="scheduleCells.length > 0" [scheduleData]="scheduleCells"></app-schedule>
 <router-outlet></router-outlet>
 <script>
   window.onload = function() {
