--- a/src/app/dashboard/search/search.component.html
+++ b/src/app/dashboard/search/search.component.html
@@ -2,7 +2,7 @@
   <div class="e-sample-resize-container my-5 rounded-2xl">
     <div class="control-section">
       <div class="col-lg-9 content-wrapper" style="height: 350px">
-        <div style="margin: 0px auto; width:250px; padding-top: 40px;">
+        <div style="margin: 0 auto; width:250px; padding-top: 40px;">
     <ejs-dropdownlist
       id="types"
       #typeList
