--- a/src/app/dashboard/admin/schedule-table-creator/department/department.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/department/department.component.html
@@ -1,9 +1,44 @@
 <div class="control-section rounded-2xl">
-  <ejs-grid [dataSource]='data' [pageSettings]='pageSettings' [allowSorting]='true' [editSettings]='editSettings' [toolbar]='toolbar' (actionBegin)="actionBegin($event)">
+  <ejs-grid (actionBegin)="actionBegin($event)" [allowSorting]='true' [dataSource]='data' [editSettings]='editSettings'
+            [pageSettings]='pageSettings' [toolbar]='toolbar'>
     <e-columns>
-      <e-column field='name' headerText='Department Name' width='120' [validationRules]='customeridrules' allowEditing='true'></e-column>
-      <e-column field='facultyId' headerText='Faculty ID' width='120' format='C2' [validationRules]='freightrules'></e-column>
+      <e-column [validationRules]='customeridrules' allowEditing='true' field='name' headerText='Department Name'
+                width='120'></e-column>
+      <e-column [validationRules]='freightrules' field='facultyId' headerText='Faculty Name' width='120'>
+        <ng-template #template let-data>
+          {{ getFacultyName(data.id) }}
+        </ng-template>
+      </e-column>
     </e-columns>
+    <ng-template #editSettingsTemplate let-data>
+      <!--      <form class="e-schedule-form e-lib e-formvalidator" id="scheduleEditForm" novalidate>-->
+      <div [formGroup]="departmentForm">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <ejs-textbox [value]='data?.name' aria-invalid="true" aria-required="true" class="e-field e-defaultcell e-control e-textbox e-lib" data-name="name"
+                         floatLabelType='Always' id="name"
+                         name="name"
+                         placeholder="Department name"></ejs-textbox>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <ejs-dropdownlist (change)='onFacultyChange($event)' (filtering)='onFiltering($event)'
+                              (select)="getFacultyName(data.id)" [allowFiltering]='true'
+                              [dataSource]='facultyDataSource'
+                              [fields]="{text: 'name', value: 'id'}" [filterBarPlaceholder]="filterPlaceholder"
+                              [placeholder]='watermark' [popupHeight]='height' [value]='getFacultyId(data.id)'
+                              aria-invalid="true" aria-required="true" class="e-field"
+                              name="facultyId"></ejs-dropdownlist>
+
+
+            <!--              <ejs-dropdownlist id="Department"  name="department.name"  data-name="department" [dataSource]='departments' [fields]="{text: 'name', value: 'id' }" (filtering)='onFiltering($event)' [filterBarPlaceholder]="filterPlaceholder"-->
+            <!--                                [popupHeight]='height' [allowFiltering]='true' [placeholder]='watermark' [value]='data?.department?.id'></ejs-dropdownlist>-->
+          </div>
+        </div>
+      </div>
+      <!--      </form>-->
+    </ng-template>
   </ejs-grid>
 </div>
 
