--- a/src/app/dashboard/admin/schedule-table-creator/groups/groups.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/groups/groups.component.html
@@ -1,34 +1,68 @@
 <div class="control-section rounded-2xl">
-  <ejs-grid [dataSource]='data' [pageSettings]='pageSettings' [allowSorting]='true' [editSettings]='editSettings' [toolbar]='toolbar' (actionBegin)="actionBegin($event)">
+  <ejs-grid (actionBegin)="actionBegin($event)" [allowSorting]='true' [dataSource]='data' [editSettings]='editSettings'
+            [pageSettings]='pageSettings' [toolbar]='toolbar'>
     <e-columns>
-      <e-column field='name' headerText='Group name' width='120' [validationRules]='customeridrules' allowEditing='true'></e-column>
-      <e-column field='quantity' headerText='Quantity' width='120' [validationRules]='freightrules'></e-column>
-      <e-column field='department.name' headerText='Department' width='120' [validationRules]='customeridrules' allowEditing='true'></e-column>
+      <e-column [validationRules]='customeridrules' allowEditing='true' field='name' headerText='Group name'
+                width='120'></e-column>
+      <e-column [validationRules]='freightrules' field='quantity' headerText='Quantity' width='120'></e-column>
+      <e-column [validationRules]='customeridrules' allowEditing='true' field='department.name' headerText='Department'
+                width='120'></e-column>
     </e-columns>
-    <ng-template #editSettingsTemplate let-data>
-      <div [formGroup]="groupForm">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <ejs-textbox id="name" placeholder="Group name" floatLabelType='Always' [value]='data?.name'></ejs-textbox>
+        <ng-template #editSettingsTemplate let-data>
+          <div [formGroup]="groupForm">
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <ejs-textbox [value]='data?.name' name="name" class="e-field e-defaultcell e-control e-textbox e-lib" data-name="name" floatLabelType='Always'
+                             id="name" placeholder="Group name"></ejs-textbox>
+
+                <!--            <ejs-textbox [value]='data?.name' aria-invalid="true" aria-required="true" class="e-field e-defaultcell e-control e-textbox e-lib" data-name="name"-->
+                <!--                         floatLabelType='Always' id="name"-->
+                <!--                         name="name"-->
+                <!--                         placeholder="Department name"></ejs-textbox>-->
+
+              </div>
+              <div class="form-group col-md-6">
+                <!--            <ejs-numerictextbox [min]='1' [step]='1' [value]='data?.quantity' floatLabelType='Always'-->
+                <!--                                format='n0' id="quantity" placeholder="Quantity"></ejs-numerictextbox>-->
+
+                <ejs-textbox [value]='data?.quantity' name="quantity" class="e-field e-defaultcell e-control e-textbox e-lib" data-name="quantity" floatLabelType='Always'
+                             id="quantity" placeholder="Group name"></ejs-textbox>
+
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+<ejs-dropdownlist (valueChange)='onDepartmentChange($event)' [allowFiltering]='true' [dataSource]='departments'
+                  [fields]="{text: 'name', value: 'id' }" [filterBarPlaceholder]="filterPlaceholder" (filtering)='onFiltering($event)'
+                  [placeholder]='watermark' [popupHeight]='height' name="department___name"
+                  [value]='data?.department?.id' class="e-field e-defaultcell e-control e-textbox e-lib" data-name="departmentId"
+                  id="departmentId"></ejs-dropdownlist>
+              </div>
+            </div>
           </div>
-          <div class="form-group col-md-6">
-            <ejs-numerictextbox id="quantity" placeholder="Quantity" floatLabelType='Always' format='n0' [value]='data?.quantity' [min]='1' [step]='1'></ejs-numerictextbox>
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <ejs-dropdownlist id="Department"  data-name="department" [dataSource]='departments' [fields]="{text: 'name', value: 'id' }" (filtering)='onFiltering($event)' [filterBarPlaceholder]="filterPlaceholder"
-                              [popupHeight]='height' [allowFiltering]='true' [placeholder]='watermark' [value]='data?.department?.id'></ejs-dropdownlist>
-          </div>
-        </div>
-      </div>
-    </ng-template>
+        </ng-template>
 
 
+      </ejs-grid>
+    </div>
 
 
+<!--    не раб-->
+<!--    <input aria-labelledby="label_textbox_1" class="e-field e-defaultcell e-control e-textbox e-lib" data-name="name"-->
+<!--           floatlabeltype="Always" id="textbox_1" name="textbox_1" ng-reflect-float-label-type="Always"-->
+<!--           ng-reflect-placeholder="Group name" ng-reflect-value="3nAIVS" role="textbox" type="text" value="3nAIVS">-->
 
-  </ejs-grid>
-</div>
+<!--    раб-->
 
-<ejs-toast #toasttype></ejs-toast>
+<!--    <input aria-labelledby="label_grid_1729725017_1name" class="e-field e-defaultcell e-control e-textbox e-lib"-->
+<!--           e-mappinguid="grid-column0"-->
+<!--           id="grid_1729725017_1name" name="name" role="textbox" style="text-align:undefined"-->
+<!--           type="text" value="1nAIVS">-->
+
+
+<!--    <input aria-invalid="true" aria-labelledby="label_textbox_1" aria-required="true" class="e-field e-defaultcell e-control e-textbox e-lib" data-name="name"-->
+<!--           floatlabeltype="Always" id="textbox_1"-->
+<!--           name="name" ng-reflect-float-label-type="Always" ng-reflect-placeholder="Department name"-->
+<!--           ng-reflect-value="Katedra chemickej technológie" role="textbox" type="text" value="Katedra chemickej technológie">-->
+
+    <ejs-toast #toasttype></ejs-toast>
